--- a/planningandacquiring/templates/planningandacquiring/breeding_reco_data.html
+++ b/planningandacquiring/templates/planningandacquiring/breeding_reco_data.html
@@ -3,7 +3,7 @@
 <center>
     <h4 class='ui horizontal divider header'>Sire (Father)</h4>
   </center>
-<table id="tabledata2" class="ui eight column inverted blue celled small table">
+<table id="tabledata2" class="ui eight column inverted blue celled collapsing small table">
     <thead>
         <tr>
             <th></th>
