--- a/planningandacquiring/templates/planningandacquiring/budget_list.html
+++ b/planningandacquiring/templates/planningandacquiring/budget_list.html
@@ -41,9 +41,9 @@
 <script type="text/javascript">
 
 	$(document).ready(function() {
-		$('#tabledata').DataTable( {
-        "order": [[ 0, "desc" ]]
-    });
+		$('#tabledata').DataTable(
+            // {"order": [[ 0, "desc" ]]}
+        );
 		$('.menu .item').tab();
 	});
 
