--- a/planningandacquiring/templates/planningandacquiring/procured_form_data.html
+++ b/planningandacquiring/templates/planningandacquiring/procured_form_data.html
@@ -47,7 +47,12 @@
         </div>    
         </div>
     </div>
+    <div>
+        <label>Date</label>
+        <input type="date" name="" id="">
+    </div>
     {% endfor %}
+
 </div>
 
 {% endblock %}
