--- a/planningandacquiring/templates/planningandacquiring/supplier_data.html
+++ b/planningandacquiring/templates/planningandacquiring/supplier_data.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 {% block content %}
-<table class="ui inverted collapsed six celled table">
+<table class="ui inverted black basic table">
     <thead>
     <tr>
         <th class="two wide">Name</th>
@@ -16,7 +16,7 @@
 
     </tr>
     <tr>
-        <th colspan="1">Address</th>
+        <th rowspan="6">Address</th>
         <td>{{supplier.address}}</td>
         
     </tr>
