--- a/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
@@ -25,6 +25,112 @@
             <div class="{{ style }} row"> {{ message }}</div>
         {% endfor %}
     {% endif %}
+  <br>
+    <button class="ui teal button" id="btn">K9's Summmary</button>
+            <div class="ui segment" id='summary' style="display: none;">
+                <table class="ui celled structured table">
+                <thead class="center aligned">
+                    <tr>
+                        <th rowspan="2">Breed</th>
+                        <th colspan="3">Dam (Mother)</th>
+                        <th colspan="3">Sire (Father)</th>
+                        <th rowspan="2">Total K9</th>
+                    </tr>
+                    <tr>
+                        <th>NDD</th>
+                        <th>EDD</th>
+                        <th>SAR</th>
+                        <th>NDD</th>
+                        <th>EDD</th>
+                        <th>SAR</th>
+                    </tr>
+                </thead>
+                <tbody class="right aligned">
+                    <tr>
+                        <td>Belgian Malinois</td>
+                        <td>{{bm_f_ndd}}</td>
+                        <td>{{bm_f_edd}}</td>
+                        <td>{{bm_f_sar}}</td>
+                        <td>{{bm_m_ndd}}</td>
+                        <td>{{bm_m_edd}}</td>
+                        <td>{{bm_m_sar}}</td>
+                        <td style="font-weight: bold;">{{bm}}</td>
+                    </tr>
+                    <tr>
+                        <td>Dutch Sheperd</td>
+                        <td>{{ds_f_ndd}}</td>
+                        <td>{{ds_f_edd}}</td>
+                        <td>{{ds_f_sar}}</td>
+                        <td>{{ds_m_ndd}}</td>
+                        <td>{{ds_m_edd}}</td>
+                        <td>{{ds_m_sar}}</td>
+                        <td style="font-weight: bold;">{{ds}}</td>
+                    </tr>
+                    <tr>
+                        <td>German Sheperd</td>
+                        <td>{{gs_f_ndd}}</td>
+                        <td>{{gs_f_edd}}</td>
+                        <td>{{gs_f_sar}}</td>
+                        <td>{{gs_m_ndd}}</td>
+                        <td>{{gs_m_edd}}</td>
+                        <td>{{gs_m_sar}}</td>
+                        <td style="font-weight: bold;">{{gs}}</td>
+                    </tr>
+                    <tr>
+                        <td>Golden Retriever</td>
+                        <td>{{gr_f_ndd}}</td>
+                        <td>{{gr_f_edd}}</td>
+                        <td>{{gr_f_sar}}</td>
+                        <td>{{gr_m_ndd}}</td>
+                        <td>{{gr_m_edd}}</td>
+                        <td>{{gr_m_sar}}</td>
+                        <td style="font-weight: bold;">{{gr}}</td>
+                    </tr>
+                    <tr>
+                        <td>Jack Russel</td>
+                        <td>{{jr_f_ndd}}</td>
+                        <td>{{jr_f_edd}}</td>
+                        <td>{{jr_f_sar}}</td>
+                        <td>{{jr_m_ndd}}</td>
+                        <td>{{jr_m_edd}}</td>
+                        <td>{{jr_m_sar}}</td>
+                        <td style="font-weight: bold;">{{jr}}</td>
+                    </tr>
+                    <tr>
+                        <td>Labrador Retriever</td>
+                        <td>{{lr_f_ndd}}</td>
+                        <td>{{lr_f_edd}}</td>
+                        <td>{{lr_f_sar}}</td>
+                        <td>{{lr_m_ndd}}</td>
+                        <td>{{lr_m_edd}}</td>
+                        <td>{{lr_m_sar}}</td>
+                        <td style="font-weight: bold;">{{lr}}</td>
+                    </tr>
+
+                    <tr style="font-weight: bold;">
+                        <td>Total</td>
+                        <td>{{ndd_f}}</td>
+                        <td>{{edd_f}}</td>
+                        <td>{{sar_f}}</td>
+                        <td>{{ndd_m}}</td>
+                        <td>{{edd_m}}</td>
+                        <td>{{sar_m}}</td>
+                        <td class="center aligned">{{t_breed}}</td>
+                    </tr>
+                   
+                </tbody>
+                <tfoot class="right aligned">
+                    <tr>
+                        <th><b>Summary</b></th>
+                        <th colspan="2"><b>{{ndd}} NDD</b></th>
+                        <th colspan="2"><b>{{edd}} EDD</b></th>
+                        <th colspan="2"><b>{{sar}} SAR</b></th>
+                      <td></td>
+                    </tr>
+                </tfoot>
+                </table>
+            </div>
+     
 
   <div class="ui top attached tabular menu">
     <a class="active item" data-tab="first">K9 Breeding (In-Heat)</a>
@@ -40,7 +146,8 @@
                <h4 class='ui horizontal divider header'>Dam (Mother)</h4>
              </center>
         
-              <table id="tabledata1" class="ui eight column inverted pink celled small table">
+              <table id="tabledata1" class="ui nine column inverted pink celled
+              collapsing small table">
                     <thead>
                         <tr>
                             <th></th>
@@ -51,12 +158,30 @@
                             <th>Birth Success</th>
                             <th>Litter</th>
                             <th>Sick Record</th>
+                            <th>In-Heat Date</th>
                         </tr>
                     </thead>
             
                     <tbody>
-            
                         {% for m, s, b in mlist %}
+
+                        {% if m.estrus_date >= today.date %}
+                        <tr class="positive">
+                            <td class="center aligned"> 
+                                <input type="radio" id="radiom" name="radiom" value="{{m.id}}">
+                            </td>
+                            <td>
+                                <a href="#" class="show_modal" id='{{m.id}}' style="color:green;">{{m.name}}</a>
+                            </td>
+                            <td>{{m.age}}</td>
+                            <td>{{m.breed}}</td>
+                            <td>{{m.capability}}</td>
+                            <td>{{b}}%</td>
+                            <td>{{m.litter_no}}</td>
+                            <td>{{s}}</td>
+                            <td>Mate Today!</td>
+                        </tr>
+                        {% else %}
                         <tr>
                             <td class="center aligned"> 
                                 <input type="radio" id="radiom" name="radiom" value="{{m.id}}">
@@ -70,7 +195,9 @@
                             <td>{{b}}%</td>
                             <td>{{m.litter_no}}</td>
                             <td>{{s}}</td>
+                            <td>{{m.last_proestrus_date|date:'m/d/Y'}}</td>
                         </tr>
+                        {% endif %}
                         {% endfor %}
                     </tbody>
                 </table>
@@ -94,7 +221,7 @@
               <h4 class='ui horizontal divider header'>Dam (Mother)</h4>
             </center>
 
-            <table id="tabledata2" class="ui seven column inverted pink celled small table">
+            <table id="tabledata2" class="ui seven column inverted pink celled collapsing small table">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -128,7 +255,8 @@
             <center>
               <h4 class='ui horizontal divider header'>Sire (Father)</h4>
             </center>
-            <table id="tabledata3" class="ui seven column inverted blue celled small table">
+            <table id="tabledata3" class="ui seven column inverted blue celled
+            collapsing small table">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -164,6 +292,14 @@
 <script type="text/javascript">
 
 	$(document).ready(function() {
+
+    $("#summary").hide();
+
+    $("#btn").click(function(){
+        $("#summary").slideToggle();
+    });
+
+
 		$('#tabledata1').DataTable({
       "order": [[ 5, "desc" ],[ 6, "desc" ],[ 7, "asc" ]]
     });
@@ -175,9 +311,9 @@
     });
 		$('.menu .item').tab();
 
-    $('.ui.radiom.checkbox').checkbox();       
-	});
+    $('.ui.radiom.checkbox').checkbox();     
 
+    
   $("input[name='radiom']").change(function () {
         var url = 'ajax_load_k9_reco';  
         var id = $("input[name='radiom']:checked"). val();
@@ -214,6 +350,9 @@
             });
 
         });
+
+	});
+
 
 </script>
 
