--- a/planningandacquiring/templates/planningandacquiring/add_breed.html
+++ b/planningandacquiring/templates/planningandacquiring/add_breed.html
@@ -31,7 +31,10 @@
                 <label>Value</label>
                 {{form.value}}
             </div>
-
+            <div class="field">
+                <label>Sex</label>
+                {{form.sex}}
+            </div>
         </div>
 
         <div class="fields">
@@ -64,6 +67,14 @@
             <div class="field">
                 <label>Skill Recommendation</label>
                 {{form.skill_recommendation}}
+            </div>
+            <div class="field">
+                <label>Skill Recommendation</label>
+                {{form.skill_recommendation2}}
+            </div>
+            <div class="field">
+                <label>Skill Recommendation</label>
+                {{form.skill_recommendation3}}
             </div>
         </div>
 
