--- a/profiles/templates/profiles/dashboard.html
+++ b/profiles/templates/profiles/dashboard.html
@@ -29,8 +29,8 @@
   </div>
 </div>
 
-<style>
-.fc-header, .fc-button, #prev, #next{
+<!-- <style>
+.fc-header, .fc-button, #prev, #next, .fc-button-group{
   background-color:orangered;
   color: white;
 }
@@ -39,7 +39,7 @@
     max-width: 900px;
     margin: 40px auto;
  }
-</style>
+</style> -->
 
 <script>
   $(document).ready(function() {
