--- a/profiles/templates/profiles/trainer_dashboard.html
+++ b/profiles/templates/profiles/trainer_dashboard.html
@@ -4,59 +4,62 @@
   <p>refresher</p> -->
 {% block dashboard %}
   <div class="container fluid">
-    <div class="ui two column grid">
-      <div class="streched row">
-        <div class="ten wide column"  style="padding-right: 0%;">
-          <div class="ui basic segment">
-            <div class="ui stackable grid">        
-                <div class="sixteen wide column">
-                    <div class="ui raised segment">
-                        <canvas id="myChart"></canvas>
-                        {{area}}
+    <div class="ui basic segment">
+        <div class="ui two column grid">
+            <div class="row">
+                <div class="four wide column">
+                  <div class="ui raised segment  center aligned">
+                      <div class="ui violet statistic">
+                          <div class="value">
+                            <i class="tags icon"></i> {{unclassified}}
+                          </div><br>
+                          <a class="label" href="#">
+                            Unclassified K9's
+                          </a>
+                        </div>
+                  </div>
+               
+                  <div class="ui raised segment center aligned">
+                      <div class="ui green statistic">
+                          <div class="value">
+                            <i class="pencil alternate icon"></i> {{grade}}
+                          </div><br>
+                          <a class="label" href="#">
+                            For Grading
+                          </a>
+                        </div>
+                  </div>
+                </div>
+                <div class="twelve wide column">
+                  <div class="ui two column grid">
+                    <div class="column">
+                        <div class="ui raised segment">
+                            <canvas id="myChart"></canvas>
+                        </div>
                     </div>
+                    <div class="column">
+                        <div class="ui raised segment">
+                            <canvas id="myChart2"></canvas>
+                        </div>
+                      </div>
+                  </div>
+                  
                 </div>
             </div>
           </div>
-        </div>
-        <div class="six wide column" style="padding: 0%;padding-right: 1%;">
-            <div class="ui basic segment" style="padding-left: 0%;">
-                
-                    <div class="ui black floating message">
-                        <p>Mini calendar</p>
-                      </div>
-                    <div class="ui orange floating message"  style="margin: 0%;padding:0%;">   
-    
-                        <table class="ui basic table">
-                          <tr>
-                            <td>Info Here</td>
-                            <td class="center aligned three wide">
-                              <a href="#" class="ui tiny black button">Details</a>
-                            </td>
-                          </tr>
-                        </table>
-                    </div>
-
-                    <div class="ui red floating message"  style="margin: 0%;padding:0%;">   
-                      <ul>
-                        <li>Reminder</li>
-                        <li>Request</li>
-                        <li>Todo List: daily, weekly, monthly</li>
-                      </ul>
-                    </div>
-            </div>
-          </div>
-        </div>
     </div>
-    </div>
+  </div>
 <script>
 $(document).ready(function() {
-    var endpoint = '../../unitmanagement/commander/api'
+    var endpoint = '../../unitmanagement/trainer/api'
     var performance = []
     $.ajax({
         method: "GET",
         url: endpoint,
         success: function(data){
-          team = data.team_items
+          current = data.current
+          demand = data.demand
+          pie_data = data.pie_data
           setChart()         
         },
         error: function(error_data){
@@ -67,17 +70,21 @@ $(document).ready(function() {
 
     function setChart(){
         var ctx = document.getElementById('myChart');
+        var ctx2 = document.getElementById('myChart2');
         //Chart1
         var myChart = new Chart(ctx, {
-            type: 'line',
+            type: 'horizontalBar',
             data: {
-              labels: ['Something'],
-              datasets: [{
-                    label: "AOR",
-                    data: team_items,
-                    backgroundColor: ['rgba(75, 192, 192, 0.5)'],
-                    borderColor: ['rgba(75, 192, 192, 1)'],
-                    borderWidth: 1
+              labels: ["EDD", "NDD", "SAR"],
+              datasets: [
+                {
+                label: "Current",
+                backgroundColor: "#3e95cd",
+                data: current,
+                }, {
+                label: "Required",
+                backgroundColor: "#8e5ea2",
+                data: demand,
                 }]
             },
             options: {
@@ -86,23 +93,33 @@ $(document).ready(function() {
             },
             title: {
                 display: true,
-                text: "AOR"
-            },
-            scales: {
-                xAxes: [{
-                ticks: {
-                    beginAtZero: true,
-                }
-                }],
-                yAxes: [{
-                ticks: {
-                    beginAtZero: true,
-                    step:1,
-                    suggestedMax:100,
-                }
-                }]
+                text: "Current and Required K9"
             },
           }
+        });
+
+        //chart 2
+        var myChart2 = new Chart(ctx2, {
+            type: 'doughnut',
+            data: {
+                labels: ['NDD','EDD','SAR'],
+                datasets: [{
+                    data: pie_data,
+                    backgroundColor: ['#F13C20','#16a085','#2980b9','#33266E',],
+                    borderColor: ['rgba(255, 99, 132, 1)','rgba(54, 162, 235, 1)','rgba(255, 206, 86, 1)','rgba(75, 192, 192, 1)',],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+            cutoutPercentage: 40,
+            animation: {
+                animateScale: true,
+            },
+            title: {
+                display: true,
+                text: "On-Training K9's"
+            },
+            }
         });
       }
     
