Partial Init Deployment update + fixed circular import thingy

--- a/deployment/templates/deployment/schedule_units.html
+++ b/deployment/templates/deployment/schedule_units.html
@@ -191,7 +191,7 @@
 <script type="text/javascript">
 
     $(document).ready(function() {
-
+        <!--$('#tabledata').DataTable({ "ordering": false });-->
         $('#tabledata2').DataTable();
         $('#tabledata3').DataTable({
               "order": [[ 4, "desc" ]]
