--- a/unitmanagement/templates/unitmanagement/physical_exam_form.html
+++ b/unitmanagement/templates/unitmanagement/physical_exam_form.html
@@ -113,11 +113,19 @@
             </table>
 
         </center>
-
+    <div class="two fields">
         <div class="field">
             <label>Diagnosis</label>
             {{form.remarks}}
         </div>
+         <div class="field">
+
+             <br>
+         <label><h3>Cleared</h3></label>
+            {{form.cleared}}
+
+        </div>
+    </div>
         <div class="ui inverted right aligned segment" style="padding: 0px;">
             <button onclick="return confirm('Are you sure?')" class = "ui button green" type="submit" >{{ actiontype }}</button>
         </div>
