--- a/unitmanagement/templates/unitmanagement/k9_data_trained.html
+++ b/unitmanagement/templates/unitmanagement/k9_data_trained.html
@@ -47,7 +47,7 @@
                         </div>
                         <div class="field">
                             <label>Training Score</label>
-                            <input type="text" value="training Score" readonly>
+                            <input type="text" value="{{train.grade}}" readonly>
                         </div>
                     </div>
                     <div class="field">
