--- a/profiles/templates/profiles/global-base-ui/notification.html
+++ b/profiles/templates/profiles/global-base-ui/notification.html
@@ -3,20 +3,44 @@
     <div style="background-color: transparent;" class="ui icon top left pointing dropdown button" >
         <i class="blue bell icon"></i>
         <span style="color:red;font-size: 12px;">{{count}}</span>
-        <div class="ui vertical scrollable menu" style="width:330px;max-height:300px; overflow-x: auto;">
-            {% for notif_data in notif_data%}
+        <div class="ui menu" style="max-height:300px;overflow:scroll;width:330px;">
+                {% for notif_data in notif_data%}
                 {%if notif_data.viewed == True %}
-                <a class="item" style='color: black;opacity: 0.6;' href="{% url 'unitmanagement:redirect_notif' notif_data.id %}">{{notif_data.message}} 
-                    <br>
-                    <small>{{notif_data.datetime}}</small>
+
+                <a class="ui feed item" style='color: black;opacity: 0.6;' href="{% url 'unitmanagement:redirect_notif' notif_data.id %}">
+                      
+                    <div class="event">
+                        <div class="content">
+                            <div class="summary">
+                                {{notif_data.message|linebreaksbr }} 
+                              
+                            </div>
+                            <div class="meta">
+                                <div class="date">
+                                        {{notif_data.datetime}}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </a>
                 {%else%}
-                <a class="item" style='color: black;' href="{% url 'unitmanagement:redirect_notif' notif_data.id %}">{{notif_data.message}} 
-                        <br>
-                        <small>{{notif_data.datetime}}</small>
+                <a class="ui feed item" style='color: black;' href="{% url 'unitmanagement:redirect_notif' notif_data.id %}">
+                        <div class="event">
+                            <div class="content">
+                                <div class="summary">
+                                        {{notif_data.message}} 
+                                </div>
+                                <div class="meta">
+                                    <div class="date">
+                                            {{notif_data.datetime}}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </a>
-                {%endif%}
-            {% endfor%}
+                {% endif%}
+                {% endfor%}
+               
         </div>
     </div>
 </a>
